--- a/vccw/site.yml
+++ b/vccw/site.yml
@@ -31,7 +31,7 @@ hostname_aliases:
 #
 version: latest
 lang: ja
-title: Tast
+title: Test
 multisite: false
 rewrite_structure: /archives/%post_id%
 
